# TempleOS-Alistair-Bell-HolyC-Compiler

./: .gitattributes  .gitignore  CMakeLists.txt  GenerateCompileCommands.sh  Grammer.s  IO.s  License.md  Main.s  Makefile  Readme.md  Readme.txt  Run.sh  RunTests.sh
.github/: License.md
.github/workflows/: rebase.yml
HolyC-SDK/: CMakeLists.txt
HolyC-SDK/Amd64/: Defs.s  String.s
HolyC-SDK/Amd64/Linux/: Puts.s
HolyC-SDK/Tests/: ExternalReferences.h  String.c
HolyC-Tools/Compiler/: CMakeLists.txt  Compiler.c  Compiler.h  CompilerMain.c
HolyC-Tools/Compiler/Amd64/: Instructions.h  Registers.h
HolyC-Tools/Core-Backend/: Analyser.c  Analyser.h  CMakeLists.txt  Common.h  Errors.c  Errors.h  Lexer.c  Lexer.h  SDK.h  Stream.c  Stream.h  Tests.c  Tests.h  Tokens.c  Tokens.h  Types.c  Types.h
HolyC-Tools/Disassembler/: Disassembler.c
HolyC-Tools/Tests/: CMakeLists.txt  Hashing.c  Parsing.c  Tests.c  Tokens.c
HolyC-Tools/Tests/Amd64-Linux/: HelloWorld.s
HolyC/Compiler/: CMakeLists.txt  Compiler.c  CompilerMain.c
HolyC/Core-Backend/: Analyser.c  Analyser.h  CMakeLists.txt  Common.h  Errors.h  Lexer.c  Lexer.h  SDK.h  Stream.h  Tests.c  Tests.h  Tokens.c  Tokens.h
HolyC/Disassembler/: CMakeLists.txt  Disassembler.c
HolyC/HolyC-SDK/: Common.h  Lexer.c  Lexer.h  SDK.h  Stream.c  Stream.h  Tests.c  Tests.h  Tokens.c  Tokens.h
HolyC/Linker/: CMakeLists.txt
HolyC/Tests/: CMakeLists.txt  Hashing.c  Tests.c  Tokens.c
HolyC/Tests/Amd64-Linux/: Gas-Assembler.s  HelloWorld.s
Improved-C/Compiler/: CMakeLists.txt  Compiler.c  Main.c
Improved-C/Disassembler/: CMakeLists.txt
Improved-C/Improved-C-SDK/: CMakeLists.txt  Common.h  Lexer.c  Lexer.h  SDK.h  Stream.c  Stream.h  Tests.c  Tests.h  Tokens.c  Tokens.h
Improved-C/Linker/: CMakeLists.txt
Improved-C/Tests/: CMakeLists.txt  Tests.c  Tokens.c
Tests/: Comment.HC  HelloWorld.HC  If.HC  Main.IC  Method.HC  NoEntryPoint.HC  NoWhitespace.HC  NoWhitespaceLong.HC  NoWhitespaceMain.HC  OneLineLong.HC  OneLineMain.HC  Scopes.HC  SquareBrackets.HC  Variable.HC  Variable.IC
Tests/Errors/: ExpectedExpressions.HC  Scoping.HC
x64/: Compiler.asm  Compiler.s  Grammer.s  Main.s
